# OpenParEM2D

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md
doc/: builder.odp  openparem2D_accuracy.odp  openparem2D_highlights_1_1.odp  openparem2D_impedance_guide.odp  openparem2D_installation.odp  openparem2D_installation_1_1.odp  openparem2D_methodology.odp  openparem2D_practical_tips_1_1.odp  openparem2D_specifications.odp  openparem2D_user_manual.odp  openparem2D_volunteer.odp
regression/: README.txt  check.sh  global_materials.txt  regression_case_list.txt  regression_results.csv  regression_results.csv.archive
regression/Lee_microstrip/full/: Lee_microstrip.FCStd1  Lee_microstrip.proj  Lee_microstrip_prototype_test_cases.csv  Lee_microstrip_test_cases.csv  Lee_microstrip_test_cases_prototype.csv  Lee_microstrip_test_fields.csv  Lee_microstrip_test_prototype_test_cases.csv  Lee_microstrip_test_results.csv  Lee_microstrip_test_test_results.csv
regression/Lee_microstrip/full_line/: Lee_microstrip.FCStd  Lee_microstrip.brep  Lee_microstrip.proj  Lee_microstrip_lines.txt
regression/Lee_microstrip/full_line_omit_current/: Lee_microstrip.FCStd  Lee_microstrip.geo  Lee_microstrip.proj  Lee_microstrip_lines_omit_current.txt  Lee_microstrip_test_cases.csv
regression/Lee_microstrip/full_line_omit_voltage/: Lee_microstrip.FCStd  Lee_microstrip.proj  Lee_microstrip_test_fields.csv
regression/Lee_microstrip/full_modal/: Lee_microstrip.proj  Lee_microstrip_modes.txt
regression/Lee_microstrip/full_modal_omit_current/: Lee_microstrip.FCStd  Lee_microstrip.msh  Lee_microstrip.proj  Lee_microstrip_derived_test_cases.csv  Lee_microstrip_modes_omit_current.txt  Lee_microstrip_test_fields.csv
regression/Lee_microstrip/full_modal_omit_voltage/: Lee_microstrip.proj  Lee_microstrip_derived_test_cases.csv  Lee_microstrip_lines_omit_voltage.txt  Lee_microstrip_test_cases.csv
regression/Lee_microstrip/half/: Lee_microstrip.geo  Lee_microstrip.msh  Lee_microstrip.proj  Lee_microstrip_modes.txt  Lee_microstrip_test_cases.csv  Lee_microstrip_test_fields.csv  Lee_microstrip_test_prototype_test_cases.csv  Lee_microstrip_test_results.csv  builder.txt  (+1 more)
regression/Simonovich_stripline/: Simonovich_stripline.FCStd  Simonovich_stripline.brep  Simonovich_stripline.geo  Simonovich_stripline.msh  Simonovich_stripline.proj  Simonovich_stripline_modes.txt  Simonovich_stripline_test_cases.csv  Simonovich_stripline_test_prototype_test_cases.csv  Simonovich_stripline_test_results.csv  Simonovich_stripline_test_test_results.csv  local_materials.txt
regression/Simonovich_stripline_study/: Simonovich_stripline.proj  Simonovich_stripline_accuracy.ods  Simonovich_stripline_for_plots.proj  Simonovich_stripline_modes.txt
regression/coax/: coax.FCStd1  coax.msh  coax.proj  coax_exact_test_cases.csv  coax_prototype_test_cases.csv  coax_test_cases_prototype.csv  coax_test_fields.csv  coax_test_prototype_test_cases.csv  coax_test_results.csv  coax_test_test_results.csv
regression/coaxEighth/: coax.FCStd  coax.FCStd1  coax.brep  coax.msh  coax.proj  coax_accuracy_run.proj  coax_accuracy_run_plots.ods  coax_accuracy_run_results.csv  coax_modes.txt  coax_prototype_test_cases.csv  coax_test_fields.csv  coax_test_prototype_test_cases.csv  coax_test_results.csv  coax_test_test_results.csv
regression/coaxEighthAlt/: coax.FCStd  coax.FCStd1  coax.proj  coax_exact_test_cases.csv  coax_modes.txt  coax_prototype_test_cases.csv  coax_test_cases.csv  coax_test_fields.csv  coax_test_prototype_test_cases.csv  coax_test_results.csv  coax_test_test_cases_prototype.csv  coax_test_test_results.csv
regression/coaxEighth_study/: coax.FCStd  coax.brep  coax.msh  coax_accuracy_run.proj  coax_accuracy_run_for_plots.proj  coax_accuracy_run_plots.ods  coax_modes.txt
regression/coax_line/: coax.brep  coax.proj  coax_modes.txt  coax_test_fields.csv  local_materials.txt
regression/coax_modal/: coax.FCStd  coax.geo  coax.proj  coax_exact_test_cases.csv
regression/differential_pair/: README.txt  diff_pair_accuracy_run_results.ods  local_materials.txt
regression/partially_filled_rect_waveguide/: README.txt  local_materials.txt  partially_filled_waveguide.FCStd  partially_filled_waveguide.FCStd1  partially_filled_waveguide.brep  partially_filled_waveguide.geo  partially_filled_waveguide.msh
regression/single_microstrip/: local_materials.txt  single.msh  single.proj  single_lines.txt
scripts/: OpenParEM2D_save.py  README.txt  checkBuilder.sh  checkErrors.sh  field_plot.py  listErrors  process.sh  proj_search  regression.sh
src/: Hsolve.c  Hsolve.h  LICENSE  Makefile.am  OpenParEM2D.cpp  OpenParEMmaterials.cpp  OpenParEMmaterials.hpp  Zsolve.c  Zsolve.h  builder.cpp  builder.hpp  config.h.in  configure  configure.ac  convergence.cpp  convergence.hpp  eigensolve.c  eigensolve.h  exports.txt  fem2D.cpp  fem2D.hpp  fieldPoints.cpp  fieldPoints.hpp  field_plot.py  findPoints.cpp  formatted_license.txt  frequencyPlan.cpp  frequencyPlan.hpp  install-sh  license.cpp  license_process.cpp  makefile  mesh.cpp  mesh.hpp  modes.cpp  modes.hpp  process.cpp  process.hpp  project.c  project.h  (+8 more)
src/.deps/: Hsolve.Po  OpenParEM2D.Po  builder.Po  convergence.Po  eigensolve.Po  fem2D.Po  fieldPoints.Po  findPoints.Po  modes.Po  process.Po  project.Po  results.Po  simplify.Po  waveguide.Po
tutorials/coaxial_waveguide/: coaxial_waveguide.FCStd  coaxial_waveguide.brep  coaxial_waveguide.geo  coaxial_waveguide.msh  coaxial_waveguide.proj  coaxial_waveguide_modes.txt  local_materials.txt
tutorials/coupled_microstrip/: coupled_microstrip.FCStd  coupled_microstrip.brep  coupled_microstrip.geo  coupled_microstrip.msh  coupled_microstrip.proj  coupled_microstrip_modes.txt  local_materials.txt
tutorials/coupled_microstrip_modal/: coupled_microstrip.FCStd  coupled_microstrip.proj  coupled_microstrip_modes.txt
tutorials/rectangular_waveguide/: global_materials.txt  rectangular_waveguide.FCStd  rectangular_waveguide.brep  rectangular_waveguide.geo  rectangular_waveguide.msh  rectangular_waveguide.proj  rectangular_waveguide_modes.txt
(+300 files in other folders)
